--- a/css/main.css
+++ b/css/main.css
@@ -55,13 +55,26 @@ body{
     background-repeat: repeat-x;
 }
 h1{
-    text-align: center;
-    font-family: "Bebas Neue Bold", sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 2.5em;
+   /* woah */
+   font-family: "Bebas Neue Bold", sans-serif;
+   font-weight: normal;
+   font-style: normal;
 }
 p{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-style: normal
+}
+
+#intro{
+   
+    text-align: center;
+    font-size: 5em;
+}
+
+#nav{
+   
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal
